Added mouse support in tmux; Minor tweaks

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,7 +21,7 @@ bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
-#set -g mouse on
+set -g mouse on
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -46,5 +46,8 @@ setw -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[
 
 # pane border style
 set -g pane-active-border-style 'bg=black fg=cyan'
+
+# Sane scrolling
+#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
  
 
