Changed to BDE, to offer a bundled experience

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,10 +11,16 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# unbind some keys
+unbind s
+unbind q
+unbind f
+unbind t
+
 # reload config file
 bind r source-file ~/.tmux.conf
 
-# switch panes using Alt-arrow without prefix
+# switch panes using Alt-arrow without prefix (doesn't work since Alt+arrow switches terminal emulators of Pi)
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
