--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "tmux-resurrect"]
-	path = tmux-resurrect
+	path = tmux/tmux-resurrect
 	url = https://github.com/tmux-plugins/tmux-resurrect
