Added script to install 'development environment' to system

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,11 +20,12 @@ unbind t
 # reload config file
 bind r source-file ~/.tmux.conf
 
-# switch panes using Alt-arrow without prefix (doesn't work since Alt+arrow switches terminal emulators of Pi)
-bind -n M-Left select-pane -L
-bind -n M-Right select-pane -R
-bind -n M-Up select-pane -U
-bind -n M-Down select-pane -D
+# switch panes using Alt-arrow without prefix 
+# ! doesn't work since Alt+arrow switches terminal emulators of Pi)
+#bind -n M-Left select-pane -L
+#bind -n M-Right select-pane -R
+#bind -n M-Up select-pane -U
+#bind -n M-Down select-pane -D
 
 # Enable mouse mode (tmux 2.1 and above)
 set -g mouse on
@@ -33,7 +34,7 @@ set -g mouse on
 set-option -g allow-rename off
 
 # Improve colors 
-set -g default-terminal 'screen-256color' 
+set -g default-terminal 'xterm-256color' 
 
 # Set scrollback buffer 
 set -g history-limit 10000 
