--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,9 +27,6 @@ bind r source-file ~/.tmux.conf
 #bind -n M-Up select-pane -U
 #bind -n M-Down select-pane -D
 
-# Enable mouse mode (tmux 2.1 and above)
-set -g mouse on
-
 # don't rename windows automatically
 set-option -g allow-rename off
 
@@ -37,7 +34,7 @@ set-option -g allow-rename off
 set -g default-terminal 'xterm-256color' 
 
 # Set scrollback buffer 
-set -g history-limit 10000 
+set -g history-limit 2048 
  
 # status bar
 set -g status-bg black
@@ -46,6 +43,25 @@ set -g status-justify centre
 set -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
 set -g status-left-length 20
 set -g status-right '#[fg=green][#[fg=cyan]%H:%M:%S | %Y-%m-%d#[fg=green]]' 
+
+# Improved mouse support
+set -g mouse on
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
+bind -n WheelDownPane select-pane -t= \; send-keys -M
+bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
+bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
+bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
+bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
+
+# To copy, left click and drag to highlight text in yellow, 
+# once you release left click yellow text will disappear and will automatically be available in clibboard
+# # Use vim keybindings in copy mode
+setw -g mode-keys vi
+# Update default binding of `Enter` to also use copy-pipe
+unbind -T copy-mode-vi Enter
+bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
 
 # window list
 setw -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
