Further improved mouse & clipboard for tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,17 +1,17 @@
 run-shell ~/tmux/tmux-resurrect/resurrect.tmux
 
-# remap prefix from 'C-b' to 'C-a'
+# remap prefix
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-# split panes using | and -
+# split panes using / and -
 bind / split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
 
-# unbind some keys
+# unbind some uncool keys
 unbind s
 unbind q
 unbind f
@@ -21,11 +21,10 @@ unbind t
 bind r source-file ~/.tmux.conf
 
 # switch panes using Alt-arrow without prefix 
-# ! doesn't work since Alt+arrow switches terminal emulators of Pi)
-#bind -n M-Left select-pane -L
-#bind -n M-Right select-pane -R
-#bind -n M-Up select-pane -U
-#bind -n M-Down select-pane -D
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -34,7 +33,7 @@ set-option -g allow-rename off
 set -g default-terminal 'xterm-256color' 
 
 # Set scrollback buffer 
-set -g history-limit 2048 
+set -g history-limit 10000
  
 # status bar
 set -g status-bg black
@@ -44,25 +43,6 @@ set -g status-left '#[bg=black,fg=green][#[fg=cyan]#S#[fg=green]]'
 set -g status-left-length 20
 set -g status-right '#[fg=green][#[fg=cyan]%H:%M:%S | %Y-%m-%d#[fg=green]]' 
 
-# Improved mouse support
-set -g mouse on
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
-bind -n C-WheelUpPane select-pane -t= \; copy-mode -e \; send-keys -M
-bind -T copy-mode-vi    C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-vi    C-WheelDownPane send-keys -X halfpage-down
-bind -T copy-mode-emacs C-WheelUpPane   send-keys -X halfpage-up
-bind -T copy-mode-emacs C-WheelDownPane send-keys -X halfpage-down
-
-# To copy, left click and drag to highlight text in yellow, 
-# once you release left click yellow text will disappear and will automatically be available in clibboard
-# # Use vim keybindings in copy mode
-setw -g mode-keys vi
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "xclip -selection c"
-bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
-
 # window list
 setw -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
 setw -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[fg=dim]'
@@ -70,7 +50,28 @@ setw -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[
 # pane border style
 set -g pane-active-border-style 'bg=black fg=cyan'
 
-# Sane scrolling
-#set -g terminal-overrides 'xterm*:smcup@:rmcup@'
+# Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer access.
+set -s escape-time 50
+
+# Mouse support
+set -g mouse on
+
+## Clipboard integration
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# Selection with mouse should copy to clipboard right away, in addition to the default action.
+unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+
+# Middle click to paste from the clipboard
+unbind-key MouseDown2Pane
+bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
+
+# Drag to re-order windows
+bind-key -n MouseDrag1Status swap-window -t=
+
+# Double click on the window list to open a new window
+bind-key -n DoubleClick1Status new-window
  
 
