prevented crashing when [prefix] -> [Ctrl+c/v]

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -51,27 +51,16 @@ setw -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[
 set -g pane-active-border-style 'bg=black fg=cyan'
 
 # Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer access.
-set -s escape-time 50
+#set -s escape-time 50
 
 # Mouse support
 set -g mouse on
 
-## Clipboard integration
-bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
-bind C-v run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# Selection with mouse should copy to clipboard right away, in addition to the default action.
+# Selection with mouse copies to clipboard right away, in addition to the default action.
 unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
 bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 # Middle click to paste from the clipboard
 unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer"
-
-# Drag to re-order windows
-bind-key -n MouseDrag1Status swap-window -t=
-
-# Double click on the window list to open a new window
-bind-key -n DoubleClick1Status new-window
- 
+bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" 
 
