set copy/paste without using Shift in tmux as experimental

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -56,11 +56,12 @@ set -g pane-active-border-style 'bg=black fg=cyan'
 # Mouse support
 set -g mouse on
 
+## Experimental Copy/Paste without pressing [Shift]. (micro destroys tmux-buffer writes after first selection is copied with Ctrl+c in micro)
 # Selection with mouse copies to clipboard right away, in addition to the default action.
-unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
-bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
+#unbind -n -Tcopy-mode-vi MouseDragEnd1Pane
+#bind -Tcopy-mode-vi MouseDragEnd1Pane send -X copy-selection-and-cancel\; run "tmux save-buffer - | xclip -i -sel clipboard > /dev/null"
 
 # Middle click to paste from the clipboard
-unbind-key MouseDown2Pane
-bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" 
+#unbind-key MouseDown2Pane
+#bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" 
 
