--- a/tmux.conf
+++ b/tmux.conf
@@ -1,5 +1,3 @@
-run-shell ~/tmux/tmux-resurrect/resurrect.tmux
-
 # remap prefix
 unbind C-b
 set-option -g prefix C-a
@@ -18,13 +16,21 @@ unbind f
 unbind t
 
 # reload config file
-bind r source-file ~/.tmux.conf
+unbind l
+bind l source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Start window numbers at 1 to match keyboard order with tmux window order
+set -g base-index 1
 
 # switch panes using Alt-arrow without prefix 
 bind -n M-Left select-pane -L
 bind -n M-Right select-pane -R
 bind -n M-Up select-pane -U
 bind -n M-Down select-pane -D
+
+# Home / End patch
+bind -n End send-key C-e
+bind -n Home send-key C-a
 
 # don't rename windows automatically
 set-option -g allow-rename off
@@ -47,6 +53,9 @@ set -g status-right '#[fg=green][#[fg=cyan]%H:%M:%S | %Y-%m-%d#[fg=green]]'
 setw -g window-status-format '#[dim]#I:#[default]#W#[fg=grey,dim]'
 setw -g window-status-current-format '#[fg=cyan,bold]#I#[fg=blue]:#[fg=cyan]#W#[fg=dim]'
 
+# Renumber tabs on exit
+set-option -g renumber-windows on
+
 # pane border style
 set -g pane-active-border-style 'bg=black fg=cyan'
 
@@ -64,4 +73,17 @@ set -g mouse on
 # Middle click to paste from the clipboard
 #unbind-key MouseDown2Pane
 #bind-key -n MouseDown2Pane run "tmux set-buffer \"$(xclip -o -sel clipboard)\"; tmux paste-buffer" 
+
+# tmux-resurrect settings
+set -g @resurrect-save 's'
+set -g @resurrect-restore 'r'
+
+# tmux-continuum settings
+#set -g @continuum-save-interval '0'
+#set -g @continuum-restore 'on'
+
+# tmux-plugins
+run-shell ~/.tmux/tmux-resurrect/resurrect.tmux
+#run-shell ~/.tmux/tmux-continuum/continuum.tmux
+
 
